--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,26 +28,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  avatar_glow: ^3.0.1
+  awesome_snackbar_content: ^0.1.3
+  cupertino_icons: ^1.0.6
+  floor: ^1.4.2
   flutter:
     sdk: flutter
-  floor: ^1.4.2
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  intl:
-  awesome_snackbar_content: ^0.1.3
-  
-
-  sqflite: any
+  intl: null
   lottie: ^3.1.2
+  speech_to_text: ^6.6.2
+  sqflite: any
+  vibration: ^1.9.0
 dev_dependencies:
+  build_runner: ^2.1.2
+  floor_generator: ^1.4.2
+  flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
-  floor_generator: ^1.4.2
-  build_runner: ^2.1.2
-  flutter_launcher_icons: "^0.13.1"
 
 flutter_launcher_icons:
   android: "ic_launcher"
@@ -55,7 +52,7 @@ flutter_launcher_icons:
   image_path: "assets/app_icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   remove_alpha_ios: true
-  
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -65,7 +62,6 @@ flutter_launcher_icons:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -80,13 +76,10 @@ flutter:
     - assets/app_icon.png
     - assets/empty_notes.json
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
